# Games101

./: .gitignore  README.md
Homework1/code/: CMakeLists.txt  main.cpp
Homework2/code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Homework3/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Homework5/Code/: Renderer.cpp  Triangle.hpp  main.cpp
Homework6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  main.cpp
